--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <!--<link rel="icon" type="image/svg+xml" href="/vite.svg" />-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Yu Sushi" />
+    <meta name="keywords" content="Yu Sushi, Nokia, Kiinalainen, Kiinalainen Ravintola, Yu Sushi Nokia, Kiinalainen Ravintola Nokia">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <title>Yu Sushi Nokia</title>
   </head>
